Drop down to use Java 11 for the tools for now